--- a/index.html
+++ b/index.html
@@ -697,11 +697,11 @@
         <!--Recommendation-add class name into tags (h2,div,li)-->
         <section id="team">
             <div class="experienced__team-and-job-opportunities">
-                
+
                 <div class="experienced__team">
-                    <div class="experienced__title-container">
-                        <img class="experienced__title-line" src="img/yellow_line.png" alt="">
-                        <h2 class="experienced__title">Experienced Team</h2>
+                    <div class="title__container">
+                        <img class="title__line" src="img/yellow_line.jpg" alt="Yellow Line">
+                        <h2 class="title__name">Experienced Team</h2>
                     </div>
                     <div class="experienced__team-content">
                         <div class="experienced__team-content-first-group">
@@ -709,45 +709,45 @@
                                 <div class="experienced__team-icon">
                                     <img src="img/adam_smith.png" alt="Adam Smith">
                                 </div>
-                                <div class="experienced__team-text">
-                                    <p class="experienced__team-title">Adam Smith</p>
-                                    <p class="experienced__team-job-title">Chief Executive Officer</p>
+                                <div class="experienced__team-name-and-post">
+                                    <p class="experienced__team-name">Adam Smith</p>
+                                    <p class="experienced__team-post">Chief Executive Officer</p>
                                 </div>
                             </article>
                             <article class="experienced__team-item">
                                 <div class="experienced__team-icon">
                                     <img src="img/amanda_williams.png" alt="Amanda Williams">
                                 </div>
-                                <div class="experienced__team-text">
-                                    <p class="experienced__team-title">Amanda Williams</p>
-                                    <p class="experienced__team-job-title">Chief Executive Officer</p>
+                                <div class="experienced__team-name-and-post">
+                                    <p class="experienced__team-name">Amanda Williams</p>
+                                    <p class="experienced__team-post">Chief Executive Officer</p>
                                 </div>
                             </article>
                             <article class="experienced__team-item">
                                 <div class="experienced__team-icon">
                                     <img src="img/dean_stevens.png" alt="Dean Stevens">
                                 </div>
-                                <div class="experienced__team-text">
-                                    <p class="experienced__team-title">Dean Stevens</p>
-                                    <p class="experienced__team-job-title">Chief Executive Officer</p>
+                                <div class="experienced__team-name-and-post">
+                                    <p class="experienced__team-name">Dean Stevens</p>
+                                    <p class="experienced__team-post">Chief Executive Officer</p>
                                 </div>
                             </article>
                             <article class="experienced__team-item">
                                 <div class="experienced__team-icon">
                                     <img src="img/douglas_stockton.png" alt="Douglas Stockton">
                                 </div>
-                                <div class="experienced__team-text">
-                                    <p class="experienced__team-title">Douglas Stockton</p>
-                                    <p class="experienced__team-job-title">Chief Executive Officer</p>
+                                <div class="experienced__team-name-and-post">
+                                    <p class="experienced__team-name">Douglas Stockton</p>
+                                    <p class="experienced__team-post">Chief Executive Officer</p>
                                 </div>
                             </article>
                             <article class="experienced__team-item">
                                 <div class="experienced__team-icon">
                                     <img src="img/daniella_jackson.png" alt="Daniella Jackson">
                                 </div>
-                                <div class="experienced__team-text">
-                                    <p class="experienced__team-title">Daniella Jackson</p>
-                                    <p class="experienced__team-job-title">Chief Executive Officer</p>
+                                <div class="experienced__team-name-and-post">
+                                    <p class="experienced__team-name">Daniella Jackson</p>
+                                    <p class="experienced__team-post">Chief Executive Officer</p>
                                 </div>
                             </article>
                         </div>
@@ -756,124 +756,129 @@
                                 <div class="experienced__team-icon">
                                     <img src="img/john_asper.png" alt="John Asper">
                                 </div>
-                                <div class="experienced__team-text">
-                                    <p class="experienced__team-title">John Asper</p>
-                                    <p class="experienced__team-job-title">Chief Executive Officer</p>
+                                <div class="experienced__team-name-and-post">
+                                    <p class="experienced__team-name">John Asper</p>
+                                    <p class="experienced__team-post">Chief Executive Officer</p>
                                 </div>
                             </article>
                             <article class="experienced__team-item">
                                 <div class="experienced__team-icon">
                                     <img src="img/william_jameson.png" alt="William Jackson">
                                 </div>
-                                <div class="experienced__team-text">
-                                    <p class="experienced__team-title">William Jackson</p>
-                                    <p class="experienced__team-job-title">Chief Executive Officer</p>
+                                <div class="experienced__team-name-and-post">
+                                    <p class="experienced__team-name">William Jackson</p>
+                                    <p class="experienced__team-post">Chief Executive Officer</p>
                                 </div>
                             </article>
                             <article class="experienced__team-item">
                                 <div class="experienced__team-icon">
                                     <img src="img/alice_ericsson.png" alt="Alice Ericsson">
                                 </div>
-                                <div class="experienced__team-text">
-                                    <p class="experienced__team-title">Alice Ericsson</p>
-                                    <p class="experienced__team-job-title">Chief Executive Officer</p>
+                                <div class="experienced__team-name-and-post">
+                                    <p class="experienced__team-name">Alice Ericsson</p>
+                                    <p class="experienced__team-post">Chief Executive Officer</p>
                                 </div>
                             </article>
                             <article class="experienced__team-item">
                                 <div class="experienced__team-icon">
                                     <img src="img/edward_rogue.png" alt="Edward Rogue">
                                 </div>
-                                <div class="experienced__team-text">
-                                    <p class="experienced__team-title">Edward Rogue</p>
-                                    <p class="experienced__team-job-title">Chief Executive Officer</p>
+                                <div class="experienced__team-name-and-post">
+                                    <p class="experienced__team-name">Edward Rogue</p>
+                                    <p class="experienced__team-post">Chief Executive Officer</p>
                                 </div>
                             </article>
                             <article class="experienced__team-item">
                                 <div class="experienced__team-icon">
                                     <img src="img/dan_epson.png" alt="Dan Epson">
                                 </div>
-                                <div class="experienced__team-text">
-                                    <p class="experienced__team-title">Dan Epson</p>
-                                    <p class="experienced__team-job-title">Chief Executive Officer</p>
+                                <div class="experienced__team-name-and-post">
+                                    <p class="experienced__team-name">Dan Epson</p>
+                                    <p class="experienced__team-post">Chief Executive Officer</p>
                                 </div>
                             </article>
                         </div>
                     </div>
                 </div>
+                <div class="title__container">
+                    <img class="title__line" src="img/yellow_line.jpg" alt="Yellow Line">
+                    <h2 class="title__name">Job Opportunities</h2>
+                </div>
                 <div class="job__opportunities">
-                    <!--yellow line-->
-                    <h2 class="job__opportunities-title">Job Opportunities</h2>
                     <div class="job__item">
-                        <p>New York</p>
-                        <p>Development Operations Engineer</p>
-                        <a href="#">Apply!</a>
+                        <p class="job__city">New York</p>
+                        <p class="job__post">Development Operations Engineer</p>
+                        <a class="job__apply" href="#">Apply!</a>
                     </div>
-                    <!--gray line-->
+                    <hr class="job__line"/>
                     <div class="job__item">
-                        <p>New York</p>
-                        <p>Paid Acquisition Manager</p>
-                        <a href="#">Apply!</a>
+                        <p class="job__city">New York</p>
+                        <p class="job__post">Paid Acquisition Manager</p>
+                        <a class="job__apply" href="#">Apply!</a>
                     </div>
-                    <!--gray line-->
+                    <hr class="job__line"/>
                     <div class="job__item">
-                        <p>New York</p>
-                        <p>Golang Senior Developer</p>
-                        <a href="#">Apply!</a>
+                        <p class="job__city">New York</p>
+                        <p class="job__post">Golang Senior Developer</p>
+                        <a class="job__apply" href="#">Apply!</a>
                     </div>
                 </div>
-            </div>
-            <div id="press" class="press">
-                <!--yellow line-->
-                <h2 class="press__title">Media About Cryptochange</h2>
-                <div class="press__slider"></div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/coinpost.svg" alt="CoinPost">
-                    <p class="press__text">CoinPost</p>
+
+                <div class="title__container">
+                    <img class="title__line" src="img/yellow_line.jpg" alt="Yellow Line">
+                    <h2 class="title__name">Media About Cryptochange</h2>
                 </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/cointelegraph.svg" alt="CoinTelegraph">
-                    <p class="press__text">CoinTelegraph</p>
+                <div id="press" class="press__media">
+
+                    <div class="press__slider"></div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/coinpost.svg" alt="CoinPost">
+                        <p class="press__text">CoinPost</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/cointelegraph.svg" alt="CoinTelegraph">
+                        <p class="press__text">CoinTelegraph</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/agora.svg" alt="Agora">
+                        <p class="press__text">Agora</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/coin_schedule.svg" alt="CoinSchedule">
+                        <p class="press__text">CoinSchedule</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/bench.svg" alt="ICO bench">
+                        <p class="press__text">ICO bench</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/icotop.svg" alt="ICOTOP">
+                        <p class="press__text">ICOTOP</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/de_center.svg" alt="DeCenter">
+                        <p class="press__text">DeCenter</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/market_watch.svg" alt="Market Watch">
+                        <p class="press__text">Market Watch</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/coin_market_cal.svg" alt="CoinMarketCal">
+                        <p class="press__text">CoinMarketCal</p>
+                    </div>
+                    <div class="press__items">
+                        <img class="press__icon" src="img/medium.svg" alt="Medium">
+                        <p class="press__text">Medium</p>
+                    </div>
                 </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/agora.svg" alt="Agora">
-                    <p class="press__text">Agora</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/coin_schedule.svg" alt="CoinSchedule">
-                    <p class="press__text">CoinSchedule</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/bench.svg" alt="ICO bench">
-                    <p class="press__text">ICO bench</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/icotop.svg" alt="ICOTOP">
-                    <p class="press__text">ICOTOP</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/de_center.svg" alt="DeCenter">
-                    <p class="press__text">DeCenter</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/market_watch.svg" alt="Market Watch">
-                    <p class="press__text">Market Watch</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/coin_market_cal.svg" alt="CoinMarketCal">
-                    <p class="press__text">CoinMarketCal</p>
-                </div>
-                <div class="press__items">
-                    <img class="press__icon" src="img/medium.svg" alt="Medium">
-                    <p class="press__text">Medium</p>
-                </div>
-            </div>
-            <p>* Do you want to become our partner? Click on the button and contact us in any convenient way for
-                you.
-            </p>
-            <a href="#footer">Contact Us</a>
-            <a  href="#why__cryptochange">Learn More &rarr;
-                <!--white arrow-->
-            </a>
+                <p>* Do you want to become our partner? Click on the button and contact us in any convenient way for
+                    you.
+                </p>
+                <a href="#footer">Contact Us</a>
+                <a href="#why__cryptochange">Learn More &rarr;
+                    <!--white arrow-->
+                </a>
             </div>
         </section>
         <!--end of section 8-->
