css block seven

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                     <div class="application__advantage advantage">
                         <ul>
                             <!-- add class -->
-                            <li>
+                            <li class="advantage__block">
                                 <!-- add class -->
                                 <div class="advantage__icon">
                                     <img src="img/icon_wallet.svg" width="40" alt="icon wallet">
