--- a/index.html
+++ b/index.html
@@ -803,19 +803,19 @@
                     <div class="job__item">
                         <p class="job__city">New York</p>
                         <p class="job__post">Development Operations Engineer</p>
-                        <a class="job__apply" href="#">Apply!</a>
+                        <a class="job__apply" href="#">Apply &rarr;</a>
                     </div>
-                    <hr class="job__line"/>
+                    <hr class="job__line" />
                     <div class="job__item">
                         <p class="job__city">New York</p>
                         <p class="job__post">Paid Acquisition Manager</p>
-                        <a class="job__apply" href="#">Apply!</a>
+                        <a class="job__apply" href="#">Apply &rarr;</a>
                     </div>
-                    <hr class="job__line"/>
+                    <hr class="job__line" />
                     <div class="job__item">
                         <p class="job__city">New York</p>
                         <p class="job__post">Golang Senior Developer</p>
-                        <a class="job__apply" href="#">Apply!</a>
+                        <a class="job__apply" href="#">Apply &rarr;</a>
                     </div>
                 </div>
 
@@ -825,54 +825,54 @@
                 </div>
                 <div id="press" class="press__media">
 
-                    <div class="press__slider"></div>
+                    <!--<div class="press__slider"></div>-->
                     <div class="press__items">
                         <img class="press__icon" src="img/coinpost.svg" alt="CoinPost">
-                        <p class="press__text">CoinPost</p>
+                        <p class="press__name">CoinPost</p>
                     </div>
                     <div class="press__items">
                         <img class="press__icon" src="img/cointelegraph.svg" alt="CoinTelegraph">
-                        <p class="press__text">CoinTelegraph</p>
+                        <p class="press__name">CoinTelegraph</p>
                     </div>
                     <div class="press__items">
                         <img class="press__icon" src="img/agora.svg" alt="Agora">
-                        <p class="press__text">Agora</p>
+                        <p class="press__name">Agora</p>
                     </div>
                     <div class="press__items">
                         <img class="press__icon" src="img/coin_schedule.svg" alt="CoinSchedule">
-                        <p class="press__text">CoinSchedule</p>
+                        <p class="press__name">CoinSchedule</p>
                     </div>
                     <div class="press__items">
                         <img class="press__icon" src="img/bench.svg" alt="ICO bench">
-                        <p class="press__text">ICO bench</p>
+                        <p class="press__name">ICO bench</p>
                     </div>
                     <div class="press__items">
                         <img class="press__icon" src="img/icotop.svg" alt="ICOTOP">
-                        <p class="press__text">ICOTOP</p>
+                        <p class="press__name">ICOTOP</p>
                     </div>
                     <div class="press__items">
                         <img class="press__icon" src="img/de_center.svg" alt="DeCenter">
-                        <p class="press__text">DeCenter</p>
+                        <p class="press__name">DeCenter</p>
                     </div>
                     <div class="press__items">
                         <img class="press__icon" src="img/market_watch.svg" alt="Market Watch">
-                        <p class="press__text">Market Watch</p>
+                        <p class="press__name">Market Watch</p>
                     </div>
                     <div class="press__items">
                         <img class="press__icon" src="img/coin_market_cal.svg" alt="CoinMarketCal">
-                        <p class="press__text">CoinMarketCal</p>
+                        <p class="press__name">CoinMarketCal</p>
                     </div>
                     <div class="press__items">
                         <img class="press__icon" src="img/medium.svg" alt="Medium">
-                        <p class="press__text">Medium</p>
+                        <p class="press__name">Medium</p>
                     </div>
                 </div>
-                <p>* Do you want to become our partner? Click on the button and contact us in any convenient way for
+                <p class="paragraph__want-become-a-partner">* Do you want to become our partner? Click on the button and contact us in any convenient way for
                     you.
                 </p>
-                <a href="#footer">Contact Us</a>
-                <a href="#why__cryptochange">Learn More &rarr;
-                    <!--white arrow-->
+                <a class="press__contact-us-button" href="#">Contact Us</a>
+                <a class="press__learn-more" href="#">Learn More &rarr;
+                    
                 </a>
             </div>
         </section>
@@ -1091,7 +1091,7 @@
                                             Landscape of Financial World
                                         </p>
                                     </div>
-                                    <time class="article__datetime-news">Tue, June 29, 2022, 10:15 AM</time>
+                                    <time class=" article__datetime-news">Tue, June 29, 2022, 10:15 AM</time>
                         </li>
                     </ul>
                 </div>
