--- a/index.html
+++ b/index.html
@@ -867,13 +867,16 @@
                         <p class="press__name">Medium</p>
                     </div>
                 </div>
-                <p class="paragraph__want-become-a-partner">* Do you want to become our partner? Click on the button and contact us in any convenient way for
+                <p class="paragraph__want-become-a-partner"><span>*</span> Do you want to become our partner? Click on
+                    the button
+                    and contact us in any convenient way for
                     you.
                 </p>
-                <a class="press__contact-us-button" href="#">Contact Us</a>
-                <a class="press__learn-more" href="#">Learn More &rarr;
-                    
-                </a>
+                <div class="press__become-a-partner">
+
+                    <a class="press__contact-us-button" href="#">Contact Us</a>
+                    <a class="press__learn-more" href="#">Learn More &rarr;</a>
+                </div>
             </div>
         </section>
         <!--end of section 8-->
