css block seven

--- a/index.html
+++ b/index.html
@@ -613,16 +613,20 @@
                     <div>
                         <!-- add class -->
                         <h2 class="application__call"> Download Our Demo Application</h2>
-                    </div><!-- add class -->
-                    <p class="application__action">Try all the available features for free and exchange cryptocurrency
+                    </div>
+                    <div>
+                        <p class="application__action">Try all the available features for free and exchange cryptocurrency
                         with ease.</p>
+                    </div>
+
                     <div class="application__advantage advantage">
                         <ul>
                             <!-- add class -->
                             <li class="advantage__block">
-                                <!-- add class -->
-                                <div class="advantage__icon">
-                                    <img src="img/icon_wallet.svg" width="40" alt="icon wallet">
+                                <div class="advantage__icon-box">
+                                    <div class="advantage__icon">
+                                        <img src="img/icon_wallet.svg" alt="icon wallet">
+                                    </div>
                                 </div>
                                 <div class="advantage__text">
                                     <div class="advantage__name">
@@ -633,10 +637,13 @@
                                     </div>
                                 </div>
                             </li>
-                            <li>
-                                <div class="advantage__icon">
-                                    <img src="img/icon_watch.svg" width="40" alt="icon watch">
+                            <li class="advantage__block">
+                                <div class="advantage__icon-box">
+                                    <div class="advantage__icon">
+                                        <img src="img/icon_watch.svg" alt="icon watch">
+                                    </div>
                                 </div>
+
                                 <div class="advantage__text">
                                     <div class="advantage__name">
                                         <p>Get Instant Notifications</p>
@@ -646,10 +653,13 @@
                                     </div>
                                 </div>
                             </li>
-                            <li>
-                                <div class="advantage__icon">
-                                    <img src="img/icon_bitcoin.svg" width="40" alt="icon bitcoin">
+                            <li class="advantage__block">
+                                <div class="advantage__icon-box">
+                                    <div class="advantage__icon">
+                                        <img src="img/icon_bitcoin.svg" alt="icon bitcoin">
+                                    </div>
                                 </div>
+                                
                                 <div class="advantage__text">
                                     <div class="advantage__name">
                                         <p>Get Instant Notifications</p>
