css block seven

--- a/index.html
+++ b/index.html
@@ -524,12 +524,16 @@
         <!--7 section-->
         <section id="download_application" class="core__features features">
             <div class="features__text">
-                <span class="yellow__line">
-                    <!--yellow line-->
-                </span>
+                <div class="application__box-line"> <!--yellow line-->
+                    <h2 class="application__line">—</h2>
+                </div>
                 <div class="features__start">
-                    <p class="features__name">Core Features</p>
-                    <p class="features__believe">We believe in decentralized and reliable crypto exchange.</p>
+                    <div>
+                        <p class="features__name">Core Features</p>
+                    </div>
+                    <div>
+                        <p class="features__believe">We believe in decentralized and reliable crypto exchange.</p>
+                    </div>
                 </div>
 
                 <div class="features__continue">
@@ -585,7 +589,7 @@
                             blockchain and off-chain.</p>
                     </div><!-- add class -->
                     <button></button><!-- add class -->
-                    <button></button><!-- add class -->
+                    <button></button><!-- add class --> 
                 </div>
 
                 <div class="features__carousel-block">
@@ -607,12 +611,14 @@
 
             <div class="demo__application application">
                 <div class="application__text">
-                    <span class="yellow__line">
-                        <!--yellow line-->
-                    </span><!-- add class -->
-                    <div>
-                        <!-- add class -->
-                        <h2 class="application__call"> Download Our Demo Application</h2>
+
+                    <div class="application__download">
+                        <div class="application__box-line"> <!--yellow line-->
+                            <h2 class="application__line">—</h2>
+                        </div>
+                        <div>
+                            <h2 class="application__call"> Download Our Demo Application</h2>
+                        </div> 
                     </div>
                     <div>
                         <p class="application__action">Try all the available features for free and exchange cryptocurrency
@@ -684,7 +690,7 @@
                     <div class="application__background">
                         <img src="img/background_phone.webp" alt="background phone">
                         <div class="application__phone">
-                            <img src="img/phone_screen.png" alt="phone screen">
+                            <img src="img/phone_screen.png" width="100" alt="phone screen">
                         </div>
                     </div>
                 </div>
