css block seven rev 3

--- a/index.html
+++ b/index.html
@@ -678,11 +678,11 @@
                             </li>
                         </ul>
                         <div class="advantage__label label">
-                            <div class="label__appstore">
-                                <img src="img/app_store.svg" alt="label app store">
+                            <div class="label__appstore-container">
+                                <img class="label__appstore" src="img/app_store.svg" alt="label app store">
                             </div>
-                            <div class="label__googleplay">
-                                <img src="img/google_play.svg" alt="label google play">
+                            <div class="label__googleplay-container">
+                                <img class="label__googleplay" src="img/google_play.svg" alt="label google play">
                             </div>
                         </div>
                     </div>
