change <time> tags to <p> tags

--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
                                     a really great idea and almost everything they needed for its implementation.»
                                 </p>
                             </div>
-                            <time class="article__datetime-investors">December 15, 2022</time>
+                            <p class="article__datetime-investors">December 15, 2022</p>
                         </div>
                     </div>
                 </div>
@@ -988,7 +988,7 @@
                                     be treated seriously by financial giants. That's why I believe in Cryptochange.»
                                 </p>
                             </div>
-                            <time class="article__datetime-investors">April 21, 2022</time>
+                            <p class="article__datetime-investors">April 21, 2022</p>
                         </div>
                     </div>
                 </div>
@@ -1003,7 +1003,7 @@
                                     crypto projects every month. However, Cryptochange
                                     seemed to me to be very smart guys with an important idea.»</p>
                             </div>
-                            <time class="article__datetime-investors">June 12, 2022</time>
+                            <p class="article__datetime-investors">June 12, 2022</p>
                         </div>
                     </div>
                 </div>
@@ -1031,7 +1031,7 @@
                                     Half of the Year
                                 </p>
                             </div>
-                            <time class="article__datetime-news"> Fri, July 2, 2022, 3:15 PM</time>
+                            <p class="article__datetime-news"> Fri, July 2, 2022, 3:15 PM</p>
                         </li>
                         <li class="article__news">
                             <div class="wrapper-news-images">
@@ -1045,7 +1045,7 @@
                                     Withdrawal Delay
                                 </p>
                             </div>
-                            <time class="article__datetime-news">Thu, July 1, 2022, 2:10 PM</time>
+                            <p class="article__datetime-news">Thu, July 1, 2022, 2:10 PM</p>
                         </li>
                         <li class="article__news">
                             <div class="wrapper-news-images">
@@ -1059,7 +1059,7 @@
                                     Doubled in Price
                                 </p>
                             </div>
-                            <time class="article__datetime-news">Wed, June 30, 2022, 6:15 PM</time>
+                            <p class="article__datetime-news">Wed, June 30, 2022, 6:15 PM</p>
                         </li>
                     </ul>
                 </div>
@@ -1083,7 +1083,7 @@
                                     $26M in Series A Funding
                                 </p>
                             </div>
-                            <time class="article__datetime-news">Fri, July 2, 2022, 2:10 PM</time>
+                            <p class="article__datetime-news">Fri, July 2, 2022, 2:10 PM</p>
                         </li>
                         <li class="article__news">
                             <div class="wrapper-news-images">
@@ -1094,10 +1094,10 @@
                             </div>
                             <div class="container__text-article-news">
                                 <p class="text__article-news">UK Sets out Its Vision for
-                                    Post-Brexit Financial Market
+                                Post-Brexit Financial Market
                                 </p>
                             </div>
-                            <time class="article__datetime-news">Thu, July 1, 2022, 4:15 PM</time>
+                            <p class="article__datetime-news">Thu, July 1, 2022, 4:15 PM</p>
                         </li>
                         <li class="article__news">
                             <div class="wrapper-news-images">
@@ -1108,10 +1108,10 @@
                             </div>
                             <div class="container__text-article-news">
                                 <p class="text__article-news>Top 5 Trends That Will Define the
-                                            Landscape of Financial World
-                                        </p>
-                                    </div>
-                                    <time class=" article__datetime-news">Tue, June 29, 2022, 10:15 AM</time>
+                                Landscape of Financial World
+                                </p>
+                            </div>
+                            <p class=" article__datetime-news">Tue, June 29, 2022, 10:15 AM</p>
                         </li>
                     </ul>
                 </div>
@@ -1135,7 +1135,7 @@
                                     Position on Crypto Regulation
                                 </p>
                             </div>
-                            <time class="article__datetime-news">Fri, July 2, 2022, 11:10 AM</time>
+                            <p class="article__datetime-news">Fri, July 2, 2022, 11:10 AM</p>
                         </li>
                         <li class="article-news">
                             <div class="wrapper-news-images">
@@ -1149,7 +1149,7 @@
                                     Crypto Regulation Because of Scams
                                 </p>
                             </div>
-                            <time class="article__datetime-news">Thu, July 1, 2022, 2:15 PM</time>
+                            <p class="article__datetime-news">Thu, July 1, 2022, 2:15 PM</p>
                         </li>
                         <li class="article-news">
                             <div class="wrapper-news-images">
@@ -1163,7 +1163,7 @@
                                     for Cryptocurrencies
                                 </p>
                             </div>
-                            <time class="article__datetime-news">Mon, June 28, 2022, 10:15 AM</time>
+                            <p class="article__datetime-news">Mon, June 28, 2022, 10:15 AM</p>
                         </li>
                     </ul>
                 </div>
